<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/options_menu"
        android:icon="@drawable/ic_more_vert_red_24dp"
        android:title=""
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/settings"
                android:title="@string/settings"
                app:showAsAction="never"
                android:icon="@drawable/ic_settings_red_24dp" />
            <item
                android:id="@+id/about"
                android:title="@string/about"
                app:showAsAction="never"
                android:icon="@drawable/ic_info_black_24dp" />

            <item
                android:id="@+id/logout"
                android:title="Log out"
                app:showAsAction="never"
                android:icon="@drawable/ic_exit_to_app_black_24dp" />

        </menu>
    </item>


</menu>