<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ExploreFragment"
    android:background="@android:color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:fitsSystemWindows="true"
            app:contentScrim="#fff"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed">



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax">
                <View
                    android:id="@+id/blank_space"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize" />

                <LinearLayout
                    android:id="@+id/layout_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="vertical"
                    android:layout_below="@+id/blank_space">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            android:id="@+id/txt_categories"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:fontFamily="@font/calibri_bold"
                            android:text="@string/categories"
                            android:textColor="@color/colorText"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/txt_see_all"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:fontFamily="@font/calibri_regular"
                            android:text="@string/see_all"
                            android:textAlignment="viewEnd"
                            android:textColor="@color/colorText"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="5"
                        android:baselineAligned="false">

                        <LinearLayout
                            android:id="@+id/layout_cat_man"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <FrameLayout
                                android:id="@+id/img_man_cat"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="@dimen/cat_circle_size"
                                    android:scaleType="centerInside"
                                    app:srcCompat="@drawable/ic_cat_background_red" />

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:scaleType="centerInside"
                                    app:srcCompat="@drawable/ic_icon_mens_shoe"
                                    android:layout_gravity="center"/>
                            </FrameLayout>


                            <TextView
                                android:id="@+id/txt_men_cat"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:fontFamily="@font/calibri_regular"
                                android:paddingTop="5dp"
                                android:text="@string/men"
                                android:textAlignment="center"
                                android:textColor="@color/colorText"
                                android:textSize="12sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/layout_cat_woman"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <FrameLayout
                                android:id="@+id/img_women_cat"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="@dimen/cat_circle_size"
                                    android:scaleType="centerInside"
                                    app:srcCompat="@drawable/ic_cat_background_red" />

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:scaleType="centerInside"
                                    app:srcCompat="@drawable/ic_icon_womens_shoe"
                                    android:layout_gravity="center"/>
                            </FrameLayout>

                            <TextView
                                android:id="@+id/txt_women_cat"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:fontFamily="@font/calibri_regular"
                                android:paddingTop="5dp"
                                android:text="@string/women"
                                android:textAlignment="center"
                                android:textColor="@color/colorText"
                                android:textSize="12sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/layout_cat_electronics"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <FrameLayout
                                android:id="@+id/img_devices_cat"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="@dimen/cat_circle_size"
                                    android:scaleType="centerInside"
                                    app:srcCompat="@drawable/ic_cat_background_red" />

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:scaleType="centerInside"
                                    app:srcCompat="@drawable/ic_icon_devices"
                                    android:layout_gravity="center"/>
                            </FrameLayout>

                            <TextView
                                android:id="@+id/txtdevices_cat"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:fontFamily="@font/calibri_regular"
                                android:paddingTop="5dp"
                                android:text="@string/electronics"
                                android:textAlignment="center"
                                android:textColor="@color/colorText"
                                android:textSize="12sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/layout_cat_gadgets"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <FrameLayout
                                android:id="@+id/img_gadgets_cat"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="@dimen/cat_circle_size"
                                    android:scaleType="centerInside"
                                    app:srcCompat="@drawable/ic_cat_background_red" />

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:scaleType="centerInside"
                                    app:srcCompat="@drawable/ic_icon_gadgets"
                                    android:layout_gravity="center"/>
                            </FrameLayout>

                            <TextView
                                android:id="@+id/txt_gadgets_cat"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:fontFamily="@font/calibri_regular"
                                android:paddingTop="5dp"
                                android:text="@string/gadgets"
                                android:textAlignment="center"
                                android:textColor="@color/colorText"
                                android:textSize="12sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/layout_cat_gaming"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <FrameLayout
                                android:id="@+id/img_gaming_cat"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="@dimen/cat_circle_size"
                                    android:scaleType="centerInside"
                                    app:srcCompat="@drawable/ic_cat_background_red" />

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:scaleType="centerInside"
                                    app:srcCompat="@drawable/ic_icon_gaming"
                                    android:layout_gravity="center"/>
                            </FrameLayout>

                            <TextView
                                android:id="@+id/txt_gaming_cat"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:fontFamily="@font/calibri_regular"
                                android:paddingTop="5dp"
                                android:text="@string/gaming"
                                android:textAlignment="center"
                                android:textColor="@color/colorText"
                                android:textSize="12sp" />
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>


            </RelativeLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="0dp"
                app:layout_collapseMode="pin"
                android:background="#fff"
                app:popupTheme="@style/OptionsMenuTheme">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/bit"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/calibri_bold"
                    android:textSize="28sp"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/trade"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="@font/calibri_bold"
                    android:textSize="28sp"
                    android:gravity="center"/>
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <!--<androidx.appcompat.widget.Toolbar-->
        <!--android:id="@+id/toolbar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="?attr/actionBarSize"-->
        <!--android:background="@android:color/white"-->
        <!--app:title="@string/actionbar"-->
        <!--app:titleTextColor="@android:color/black" />-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_products_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="@dimen/bottom_bar_size"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        tools:itemCount="5"
        tools:listitem="@layout/cardview_item"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

<!--    <RelativeLayout-->
<!--        android:id="@+id/layout_error"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:visibility="gone">-->

<!--        <View-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:background="@android:color/background_light"-->
<!--            android:alpha="0.5"/>-->

<!--        <ImageView-->
<!--            android:id="@+id/network_error_image"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:srcCompat="@drawable/ic_portable_wifi_off_black_24dp"-->
<!--            android:layout_centerInParent="true"/>-->

<!--        <Button-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textAllCaps="false"-->
<!--            android:background="@color/colorTextLight"-->
<!--            android:text="Refresh"-->
<!--            android:textSize="16sp"-->
<!--            android:layout_below="@id/network_error_image"-->
<!--            android:layout_centerHorizontal="true" />-->

<!--    </RelativeLayout>-->



</androidx.coordinatorlayout.widget.CoordinatorLayout>